@@ -141,8 +141,9 @@ public class JavaFileCreator implements ICodeLevelModelCreator {
 	}
 
 	private void initialise(String aSourcePath, String[] someFilesInThePath) {
+		// From jct.test.common.JCTConstant.OPTIONS
 		this.initialise(
-				Arrays.asList(new String[] { "-source", "17", "-classpath",
+				Arrays.asList(new String[] { "--enable-preview", "--release", "21", "-classpath",
 						System.getProperty("java.class.path", ".") + ":"
 								+ aSourcePath,
 						"-d", aSourcePath }),
